edit some style

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li><a href="#testimonials"><i class="bi bi-chat navicon"></i> Testimonials</a></li>
         <!--<li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="#">Dropdown 1</a></li>
@@ -101,7 +102,7 @@
     <blockquote style="font-family: Georgia, 'Times New Roman', Times, serif; border-left: 4px solid #FFD700;"> "Confidence in quality gives you the courage to enter the competition, and we deserve the gold medal." </blockquote>
   </div>
   
-      <div style="text-align: right;" class="container" data-aos="fade-up" data-aos-delay="100">
+      <div style="text-align: right; margin-top: 29%;" class="container" data-aos="fade-up" data-aos-delay="100">
         <h3>Abdullah Abdelbary</h3>
         <p>I'm <span class="typed" data-typed-items="Software Tester, Freelancer, QA Engineer">Software Tester</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
@@ -563,7 +564,8 @@
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Manual Testing</a></h4>
+              <!--<h4 class="title"><a href="service-details.html" class="stretched-link">Manual Testing</a></h4> -->
+              <h4 style="color: rgb(13, 164, 167);">Manual Testing</h4>
               <p class="description"> Comprehensive functional testing to validate features against requirements. Exploratory testing to uncover hidden issues. Test case creation and execution.</p>
             </div>
           </div>
@@ -571,35 +573,35 @@
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Automation Testing</a></h4>
+              <h4 style="color: rgb(13, 164, 167);">Automation Testing</h4>
               <p class="description">Writing and executing test scripts using tools like Selenium (or specify tools you use). Regression testing to ensure updates don't break existing functionality. Identifying and implementing automation opportunities for repetitive tests.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Bug Reporting and Tracking</a></h4>
+              <h4 style="color: rgb(13, 164, 167);">Bug Reporting and Tracking</h4>
               <p class="description">Clear and detailed defect documentation using tools like JIRA, Bugzilla, or Trello. Collaborating with developers to prioritize and resolve issues.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Performance Testing</a></h4>
+              <h4 style="color: rgb(13, 164, 167);">Performance Testing</h4>
               <p class="description">Basic performance checks to ensure application stability under expected loads. Reporting bottlenecks and performance anomalies.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Cross-Browser and Device Testing</a></h4>
+              <h4 style="color: rgb(13, 164, 167);">Cross-Browser and Device Testing</h4>
               <p class="description">Ensuring seamless user experience across multiple browsers (Chrome, Firefox, Safari, etc.). Testing responsiveness and compatibility across devices (mobile, tablet, desktop).</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Test Planning and Documentation</a></h4>
+              <h4 style="color: rgb(13, 164, 167);">Test Planning and Documentation</h4>
               <p class="description">Creating detailed test plans and strategies tailored to project requirements. Preparing comprehensive test reports to inform stakeholders of testing outcomes.</p>
             </div>
           </div><!-- End Service Item -->
