--- a/project1.html
+++ b/project1.html
@@ -67,6 +67,7 @@
         <li><a href="index.html"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="index.html"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="index.html"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li><a href="index.html"><i class="bi bi-chat navicon"></i> Testimonials</a></li>
                 <!--<li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="#">Dropdown 1</a></li>
