--- a/project10.html
+++ b/project10.html
@@ -67,6 +67,7 @@
         <li><a href="index.html"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="index.html"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="index.html"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
+        <li><a href="index.html"><i class="bi bi-chat navicon"></i> Testimonials</a></li>
       </ul>
     </nav>
 
