edit some style edit something else else

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><img src="assets/img/icons/testing.png" style="width: 70%;" class="img-fluid" alt=""></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Test Case Design & Execution</a></h4>
+              <h4 class="title"><a class="stretched-link">Test Case Design & Execution</a></h4>
               <p class="description">Creating detailed scenarios to validate software functionality and Running test scenarios to ensure expected outcomes.</p>
             </div>
           </div><!-- End Service Item -->
@@ -235,7 +235,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><img src="assets/img/icons/bug-report.png" style="width: 70%;" class="img-fluid" alt=""></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Bug Reporting & Tracking</a></h4>
+              <h4 class="title"><a class="stretched-link">Bug Reporting & Tracking</a></h4>
               <p class="description">Documenting issues with clear details for resolution and Monitoring and managing bugs using tools like Jira and Bugzilla.</p>
             </div>
           </div><!-- End Service Item -->
@@ -243,7 +243,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><img src="assets/img/icons/linear-regression.png" style="width: 70%;" class="img-fluid" alt=""></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Regression & Functional Testing</a></h4>
+              <h4 class="title"><a class="stretched-link">Regression & Functional Testing</a></h4>
               <p class="description">Verify that recent changes haven't affected existing functionality and Ensuring software features work as intended per requirements.</p>
             </div>
           </div><!-- End Service Item -->
@@ -251,7 +251,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><img src="assets/img/icons/selenium.png" style="width: 70%;" class="img-fluid" alt=""></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Selenium WebDriver</a></h4>
+              <h4 class="title"><a class="stretched-link">Selenium WebDriver</a></h4>
               <p class="description">Automating browser actions to test web applications efficiently and Enhancing test coverage and speed through specialized testing frameworks.</p>
             </div>
           </div><!-- End Service Item -->
@@ -259,7 +259,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><img src="assets/img/icons/web.png" style="width: 70%;" class="img-fluid" alt=""></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">API Testing</a></h4>
+              <h4 class="title"><a class="stretched-link">API Testing</a></h4>
               <p class="description">Validating APIs for functionality, reliability, and performance using tools like Postman and REST Assured.</p>
             </div>
           </div><!-- End Service Item -->
@@ -267,7 +267,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><img src="assets/img/icons/sql-server.png" style="width: 70%;" class="img-fluid" alt=""></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">SQL for Data Validation</a></h4>
+              <h4 class="title"><a class="stretched-link">SQL for Data Validation</a></h4>
               <p class="description">Querying databases to ensure accuracy and consistency of data.</p>
             </div>
           </div><!-- End Service Item -->
@@ -275,7 +275,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><img src="assets/img/icons/agile.png" style="width: 70%;" class="img-fluid" alt=""></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Agile Methodologies</a></h4>
+              <h4 class="title"><a class="stretched-link">Agile Methodologies</a></h4>
               <p class="description">Delivering quality software through iterative processes like Scrum and Kanban.</p>
             </div>
           </div><!-- End Service Item -->
@@ -283,7 +283,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><img src="assets/img/icons/programming.png" style="width: 70%;" class="img-fluid" alt=""></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Strong Knowledge of Programming</a></h4>
+              <h4 class="title"><a class="stretched-link">Strong Knowledge of Programming</a></h4>
               <p class="description">Proficient in languages like Java, Python, C, C#, and JavaScript for effective problem-solving.</p>
             </div>
           </div><!-- End Service Item -->
@@ -351,8 +351,8 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Software Tester</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Egypt, Cairo</em></p>
+              <h5>GoldTech - Egypt, Cairo</h5>
+              <h5>2023 - Present</h5>
               <ul>
                 <li>Conducted functional, regression, and system testing across multiple platforms to ensure software quality.</li>
                 <li>Designed, executed, and maintained test cases for web and mobile applications.</li>
@@ -380,7 +380,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>I'm a detail-oriented Software Tester with 1 year of experience, driven by curiosity and a keen eye for detail. i thrive on ensuring that every product i work on delivers a seamless user experience and meets the highest quality standards.</p>
+        <p>I make sure to diversify my projects to cover as many domains as possible. Once you put effort into a specific domain and master it, everything that follows within that domain becomes somewhat similar and familiar.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
